projects/compiler/test/parser/try_error_invalid_token.out
Error at %FILE_NAME%:1:13
Unexpected token 'return':
  |  val x = try return 123
                 ^