projects/compiler/test/parser/try_error_invalid_token.abra
val x = try return 123